[package]
name = "xml2yaml"
version = "0.1.0"
edition = "2021"
authors = ["XML to YAML converter"]
description = "A tool to convert XML files to YAML format"

[dependencies]
quick-xml = "0.31"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
